Fix z-index

--- a/src/scss/_affix.scss
+++ b/src/scss/_affix.scss
@@ -7,6 +7,8 @@ $affixed-header-height: 125px;
 #affix-target-header {
   margin-bottom: 20px;
 
+  z-index: 1;
+
   background-color: #fff;
   box-shadow: 0 30px 20px -10px #fff;
 
@@ -23,4 +25,6 @@ $affixed-header-height: 125px;
   top: $affixed-header-height;
   width: 213px;
   @include size-min(lg) { width: 262px; }
+
+  z-index: 2;
 }
